tests/ok/meta-function-ast-statement-body.ari
enum MaybeI64 {
  None,
  Some(i64),
}

meta fn staged(input: ast) -> ast {
  return {
    let base = input + 1;
    var total = base * 2;
    total += 3;
    total
  };
}

meta fn branch_stmt(input: ast) -> ast {
  return if input > 0 {
    let bumped = input + 2;
    bumped
  } else {
    let fallback = 5;
    fallback
  };
}

meta fn if_let_stmt(input: ast) -> ast {
  return if let Some(value) = input {
    let doubled = value * 2;
    doubled
  } else {
    7
  };
}

fn main() -> i64 {
  let base = 4;
  let total = 9;
  return staged!(base) +
         total +
         staged!(6) +
         branch_stmt!(1) +
         branch_stmt!(0) +
         if_let_stmt!(Some(4)) +
         if_let_stmt!(None());
}
